# RTM

./: .clang-format  CMakeLists.txt  CMakeSettings.json
.github/workflows/: GCC Linux Build.yml  Windows Build.yml
ADLExample/: CMakeLists.txt  main.cpp
Algorithms/: BinarySearch.hpp  CMakeLists.txt  QuickSort.hpp  main.cpp
Caching/: CMakeLists.txt  CachingAbstract.hpp  CachingCRTP.hpp  MainTests.cpp  SimpleCache.hpp  main.cpp
CustomKeyForHash/: CMakeLists.txt  main.cpp
Danils/: CMakeLists.txt
Danils/SmartPointer/: CMakeLists.txt  SharedPointer.hpp
Danils/Vector/: Allocator.hpp  CMakeLists.txt  MainTests.cpp  Vector.hpp  VectorException.hpp  VectorIterator.hpp
DanilsSmartPointer/: CMakeLists.txt  SharedPointer.hpp  main.cpp
DanilsVector/: Allocator.hpp  CMakeLists.txt  MainTests.cpp  Vector.hpp  VectorException.hpp  main.cpp
DataStructures/: CMakeLists.txt  main.cpp
DataStructures/Graphs/: ShowEdges.hpp
DesignPatterns/: CMakeLists.txt  Patterns.hpp  PimplFileOutputter.hpp  PimplPattern.cpp  PimplPattern.hpp  main.cpp
DesignPatterns/DependencyInjection/: DependencyInjection.hpp
DesignPatterns/Factory/: Factory.hpp
DesignPatterns/Pimpl/: Pimpl.cpp  Pimpl.hpp
MemAllocChecker/: CMakeLists.txt  MemAllocChecker.hpp  main.cpp
Multithreading/: Asynchrony.hpp  CMakeLists.txt  main.cpp
Multythreading/: CMakeLists.txt
SFINAE/: CMakeLists.txt  Examples.hpp  main.cpp
Standart_17/: CMakeLists.txt  Examples.hpp  main.cpp
Standart_17/Examples/: AnY.hpp  CMakeLists.txt  FileSystem.hpp  FoldExpression.hpp  OptionaL.hpp  PairsIteratorsAlgorithms.hpp  StringView.hpp  VarianT.hpp
